fix: subtitle spacing in deal of the week

--- a/src/components/DealOfTheWeek/DealOfTheWeek.scss
+++ b/src/components/DealOfTheWeek/DealOfTheWeek.scss
@@ -11,7 +11,7 @@
 
   &__subtitle {
     margin: 0;
-    padding: 1rem;
+    padding-bottom: 1rem;
   }
 
   &__list {
